tests/build/cases/widget_new/malformed_property_path1.stderr
error: expected property or when
 --> cases/widget_new/malformed_property_path1.rs:6:9
  |
6 |         _ = 0;
  |         ^
