tests/build/cases/widget_new/malformed_property_path1.rs
use zero_ui::widgets::wgt;

fn main() {
    let _scope = zero_ui::core::app::App::minimal();
    let _ = wgt! {
        _ = 0;
    };
}
